[package]
name = "demonplayer"
version = "0.1.0"
authors = ["Miranda Kastemaa <miranda@foldplop.com>"]

[lib]
name = "demonplayer"
path = "src/lib.rs"

[[bin]]
name = "demonplayer-demo"
path = "src/main.rs"

[dependencies.claxon]
git = "https://github.com/ahihi/claxon"

[dependencies.portaudio]
git = "https://github.com/ahihi/rust-portaudio"
